--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a href="mailto:irfanpurwos@gmail.com" class="home__social-icon"><i><span class="iconify" data-icon="cib-gmail" data-inline="false"></span></iconify-icon></i></a>
                         <a href="https://www.linkedin.com/in/irfan-purwo-saputro/" class="home__social-icon" target="blank"><i class='bx bxl-linkedin' ></i></a>
                         <!-- <span class="iconify" data-icon="cib:gmail" data-inline="false"></span> -->
-                        <a href="assets/Irfan Purwo Saputro_cv.pdf" class="home__social-icon" target="_blank"><span class="iconify" data-icon="academicons:cv-square"></span></a>
+                        <a href="assets/Irfan Purwo Saputro - CV.pdf" class="home__social-icon" target="_blank"><span class="iconify" data-icon="academicons:cv-square"></span></a>
                     </div>
                 </div>
 
