--- a/port6.html
+++ b/port6.html
@@ -16,30 +16,30 @@
     <!--===== HEADER =====-->
     <header class="l-header">
       <nav class="nav bd-grid">
-        <div>
-          <a href="index.html" class="nav__logo" style="color: #4070f4">Irfan Purwo Saputro</a>
-        </div>
+          <div>
+              <a href="index.html" class="nav__logo" style="color: #5f927f;">Irfan Purwo Saputro</a>
+          </div>
 
-        <div class="nav__menu" id="nav-menu">
-          <ul class="nav__list">
-            <li class="nav__item"><a href="index.html" class="nav__link" style="color: #fff">Home</a></li>
-            <li class="nav__item"><a href="index.html" class="nav__link" style="color: #fff">About</a></li>
-            <li class="nav__item"><a href="index.html" class="nav__link" style="color: #fff">Skills</a></li>
-            <li class="nav__item"><a href="port1.html" class="nav__link active" style="color: #fff">Work</a></li>
-            <!-- <li class="nav__item"><a href="#contact" class="nav__link" style="color: #fff;">Contact</a></li> -->
-          </ul>
-        </div>
+          <div class="nav__menu" id="nav-menu">
+              <ul class="nav__list">
+                  <li class="nav__item"><a href="#home" class="nav__link active" style="color: black;">Home</a></li>
+                  <li class="nav__item"><a href="#about" class="nav__link" style="color: black;">About</a></li>
+                  <!-- <li class="nav__item"><a href="#skills" class="nav__link" style="color: black;">Skills</a></li> -->
+                  <li class="nav__item"><a href="#work" class="nav__link" style="color: black;">Work</a></li>
+                  <!-- <li class="nav__item"><a href="#contact" class="nav__link" style="color: #fff;">Contact</a></li> -->
+              </ul>
+          </div>
 
-        <div class="nav__toggle" id="nav-toggle">
-          <i class="bx bx-menu"></i>
-        </div>
+          <div class="nav__toggle" id="nav-toggle">
+              <i><span class="iconify" data-icon="bx:menu" style="color: #5f927f;"></span></i>
+          </div>
       </nav>
-    </header>
+  </header>
 
     <main class="l-main">
       <!--===== ABOUT =====-->
       <section class="about section" id="about">
-        <h2 class="section-title">Kitabisa — UI/UX Case Study</h2>
+        <h2 class="section-title" style="color: black;">Kitabisa — UI/UX Case Study</h2>
 
         <div class="portfolio__container bd-grid">
           <div class="port__img">
