--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="nav__toggle" id="nav-toggle">
-                    <i class='bx bx-menu'></i>
+                    <i><span class="iconify" data-icon="bx:menu" style="color: #5f927f;"></span></i>
                 </div>
             </nav>
         </header>
@@ -198,14 +198,14 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <a href="#"><img src="assets/img/port6.png" alt=""></a>
+                        <a href="portf6.html"><img src="assets/img/port6/cover kitabisa.png" alt=""></a>
                     </div>
-                    <div class="work__img">
+                    <!-- <div class="work__img">
                         <a href="#"><img src="assets/img/port3.png" alt=""></a>
                     </div>
                     <div class="work__img">
                         <a href="#"><img src="assets/img/port1.png" alt=""></a>
-                    </div>
+                    </div> -->
                     <!-- <div class="work__img">
                         <a href="port2.html"><img src="assets/img/port2.png" alt=""></a>
                     </div> -->
@@ -247,7 +247,7 @@
 
 
         <!--===== SCROLL REVEAL =====-->
-        <script src="https://unpkg.com/scrollreveal"></script>
+        <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
 
         <!--===== MAIN JS =====-->
         <script src="assets/js/main.js"></script>
