--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <section class="about section " id="about">
                 <h2 class="section-title" style="color: black;">About</h2>
 
-                <div class="about__container bd-grid">
+                <div class="about__container bd-grid" style="align-items: center;">
                     <div class="about__img">
                         <img src="assets/img/profile il 1.png" alt="">
                     </div>
