--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <div class="home__social">
                         <a href="mailto:irfanpurwos@gmail.com" class="home__social-icon"  style="color: black;"><i><span class="iconify" data-icon="cib-gmail" data-inline="false"></span></iconify-icon></i></a>
                         <a href="https://www.linkedin.com/in/irfan-purwo-saputro/" class="home__social-icon" target="blank" style="color: black;"><i class='bx bxl-linkedin' ></i></a>
+                        <a href="https://dribbble.com/irfansaputro" class="home__social-icon" target="blank" style="color: black;"><i><span class="iconify" data-icon="icon-park-outline:dribble"></span></i></a>
                         <!-- <span class="iconify" data-icon="cib:gmail" data-inline="false"></span> -->
                         <a href="assets/Irfan Purwo Saputro - CV.pdf" class="home__social-icon" target="_blank" style="color: black;"><span class="iconify" data-icon="academicons:cv-square"></span></a>
                     </div>
@@ -69,9 +70,9 @@
                     
                     <div>
                         <h2 class="about__subtitle">Irfan Purwo Saputro</h2>
-                        <p class="about__text" style="color: black;">Self-taught who are keen to learn about user interface and user experience design. Having an educational background
-                            in Informatics Engineering is expected to be able to understand the technology and collaborate with others to creating
-                            the product based on the user needs.</p>           
+                        <p class="about__text" style="color: black;">Self-taught who are keen to learn about user interface design and user experience. 
+                            Having an educational background in Informatics is expected to be able to apply the knowledge and gain experience in the UI/UX Design field.  
+                        </p>           
                     </div>                                   
                 </div>
             </section>
