--- a/index.html
+++ b/index.html
@@ -199,7 +199,10 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <a href="portf6.html"><img src="assets/img/port6/cover kitabisa.png" alt=""></a>
+                        <a href="catat.html"><img src="assets/img/catat/Cover-1.png" alt=""></a>
+                    </div>
+                    <div class="work__img">
+                        <a href="kitabisa.html"><img src="assets/img/port6/cover kitabisa.png" alt=""></a>
                     </div>
                     <!-- <div class="work__img">
                         <a href="#"><img src="assets/img/port3.png" alt=""></a>
