--- a/catat.html
+++ b/catat.html
@@ -389,7 +389,7 @@
                         </div>
                         <div style="margin-top: 1rem;">
                             <!-- <img src="assets/img/port6/User FLow.png" style="width:70%; height: auto; border-radius: 0.5rem; margin-left: 9rem;"> -->
-                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); align-items: center;"  width="1000" height="450"
+                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); align-items: center; width: 100%; height: 1100px;" 
                             src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FMi984BoGMefMStkaPk5oz6%2FCatat%3Fpage-id%3D284%253A424%26type%3Ddesign%26node-id%3D288-1144%26viewport%3D251%252C104%252C0.07%26t%3DpwSePEuVDDdGadzE-1%26scaling%3Dscale-down%26starting-point-node-id%3D601%253A2720%26mode%3Ddesign" allowfullscreen>
                         </iframe>
                         </div>                              
@@ -404,7 +404,7 @@
                         </div>
                         <div style="margin-top: 1rem;">
                             <!-- <img src="assets/img/port6/User FLow.png" style="width:70%; height: auto; border-radius: 0.5rem; margin-left: 9rem;"> -->
-                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); align-items: center;"  width="1000" height="450"
+                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); align-items: center; width: 100%; height: 500px;" 
                             src="https://app.maze.co/report/Catat-Study-Case/po4i11lsn17kcd/intro/embed" allowfullscreen>
                             </iframe>
                         </div>                              
