--- a/kitabisa.html
+++ b/kitabisa.html
@@ -332,7 +332,7 @@
                         </div>
                         <div style="margin-top: 1rem;">
                             <!-- <img src="assets/img/port6/User FLow.png" style="width:70%; height: auto; border-radius: 0.5rem; margin-left: 9rem;"> -->
-                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); align-items: center;" width="1000" height="450" 
+                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); align-items: center; width: 100%; height: 1100px;" 
                             src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FXkKZNTjBLZX5XKGu3hgIsa%2FUI-Design---Kitabisa%3Fnode-id%3D362-1402%26starting-point-node-id%3D186%253A443%26mode%3Ddesign%26t%3DSSbgHyvhRTeYO3F4-1" allowfullscreen>
                             </iframe>
                         </div>                              
