--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a href="https://www.linkedin.com/in/irfan-purwo-saputro/" class="home__social-icon" target="blank" style="color: black;"><i class='bx bxl-linkedin' ></i></a>
                         <a href="https://dribbble.com/irfansaputro" class="home__social-icon" target="blank" style="color: black;"><i><span class="iconify" data-icon="icon-park-outline:dribble"></span></i></a>
                         <!-- <span class="iconify" data-icon="cib:gmail" data-inline="false"></span> -->
-                        <a href="assets/Irfan Purwo Saputro - CV.pdf" class="home__social-icon" target="_blank" style="color: black;"><span class="iconify" data-icon="academicons:cv-square"></span></a>
+                        <!-- <a href="assets/Irfan Purwo Saputro - CV.pdf" class="home__social-icon" target="_blank" style="color: black;"><span class="iconify" data-icon="academicons:cv-square"></span></a> -->
                     </div>
                 </div>
 
@@ -70,9 +70,11 @@
                     
                     <div>
                         <h2 class="about__subtitle">Irfan Purwo Saputro</h2>
-                        <p class="about__text" style="color: black;">Self-taught who are keen to learn about user interface design and user experience. 
-                            Having an educational background in Informatics is expected to be able to apply the knowledge and gain experience in the UI/UX Design field.  
-                        </p>           
+                        <p class="about__text" style="color: black;">My name is Irfan Purwo Saputro, I am graduated from State Polytechnic of Malang majoring in Informatic Engineering in 2023, 
+                            with a strong passion for UI/UX Design. Through extensive training and practical projects, such as redesigning the Kitabisa app, 
+                            I have honed my ability to apply user-centered design principles and leverage tools like Figma to create intuitive and engaging interfaces. 
+                            My programming experience complements my design skills, provides a solid foundation in web development and enhances my ability to build user interfaces. 
+                            I am looking for the opportunity to develop my skills and experience to contribute to a dynamic team and develop further as a professional in the UI/UX design field.
                     </div>                                   
                 </div>
             </section>
