--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
+                        <a href="ideabox.html"><img src="assets/img/ideabox/cover.png" alt=""></a>
+                    </div>
+                    <div class="work__img">
                         <a href="catat.html"><img src="assets/img/catat/Cover-1.png" alt=""></a>
                     </div>
                     <div class="work__img">
