--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">Irfan Purwo Saputro</h2>
-                        <p class="about__text" style="color: black;">My name is Irfan Purwo Saputro, I am graduated from State Polytechnic of Malang majoring in Informatic Engineering in 2023, 
+                        <p class="about__text" style="color: black;">My name is Irfan Purwo Saputro, I graduated from State Polytechnic of Malang majoring in Informatic Engineering in 2023, 
                             with a strong passion for UI/UX Design. Through extensive training and practical projects, such as redesigning the Kitabisa app, 
                             I have honed my ability to apply user-centered design principles and leverage tools like Figma to create intuitive and engaging interfaces. 
                             My programming experience complements my design skills, provides a solid foundation in web development and enhances my ability to build user interfaces. 
@@ -199,32 +199,65 @@
             <section class="work section" id="work">
                 <h2 class="section-title" style="color: black;">Work</h2>
 
-                <div class="work__container bd-grid">
-                    <div class="work__img">
-                        <a href="ideabox.html"><img src="assets/img/ideabox/cover.png" alt=""></a>
+                <div class="bd-grid" style="align-items: center;">
+                    <h2 class="about__subtitle" style="color: black;">UI/UX Study Case</h2>
+                </div>
+                <div class="about__container bd-grid" style="align-items: center;">
+                    <div>
+                        <div class="work__img">
+                            <a href="niagahoster.html"><img src="assets/img/niagahoster/Niagahoster_cover.png" alt=""></a>
+                        </div>
+                        <div>
+                            <h3 style="color: black;"> Redesign Checkout Flow Niagahoster</h3>
+                            <p style="color: black;"> UX/UI Design</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="work__img">
+                            <a href="ideabox.html"><img src="assets/img/ideabox/cover.png" alt=""></a>
+                        </div>
+                        <div>
+                            <h3 style="color: black;"> Usability Testing Research Plan Ideabox</h3>
+                            <p style="color: black;"> UX Research</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="work__img">
+                            <a href="catat.html"><img src="assets/img/catat/Cover-1.png" alt=""></a>
+                        </div>
+                        <div>
+                            <h3 style="color: black;"> Catat - Sales Transcation Recording</h3>
+                            <p style="color: black;"> UX/UI Design</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="work__img">
+                            <a href="kitabisa.html"><img src="assets/img/port6/cover kitabisa.png" alt=""></a>
+                        </div>
+                        <div>
+                            <h3 style="color: black;"> Redesign Kitabisa Application</h3>
+                            <p style="color: black;"> UX/UI Design</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- <div class="bd-grid" style="align-items: center; margin-top: 2rem;">
+                    <h2 class="about__subtitle" style="color: black;">Projects</h2>
+                </div>
+                <div class="about__container bd-grid" style="align-items: center;">
+                    <div>
+                        <div class="work__img">
+                            <a href="data_pengusahaan.html"><img src="assets/img/port1.png" alt=""></a>
+                        </div>
+                        <div>
+                            <h3 style="color: black;">Sistem Informasi Data Pengusahaan</h3>
+                            <p style="color: black;">User Research</p>
+                        </div>
                     </div>
                     <div class="work__img">
-                        <a href="catat.html"><img src="assets/img/catat/Cover-1.png" alt=""></a>
-                    </div>
-                    <div class="work__img">
-                        <a href="kitabisa.html"><img src="assets/img/port6/cover kitabisa.png" alt=""></a>
-                    </div>
-                    <!-- <div class="work__img">
                         <a href="#"><img src="assets/img/port3.png" alt=""></a>
                     </div>
-                    <div class="work__img">
-                        <a href="#"><img src="assets/img/port1.png" alt=""></a>
-                    </div> -->
-                    <!-- <div class="work__img">
-                        <a href="port2.html"><img src="assets/img/port2.png" alt=""></a>
-                    </div> -->
-                    <!-- <div class="work__img">
-                        <a href="port4.html"><img src="assets/img/port4/IMG_1.png" alt=""></a>
-                    </div> -->
-                    <!-- <div class="work__img">
-                        <a href="port5.html"><img src="assets/img/port5/IMG_1.png" alt=""></a>
-                    </div> -->
-                </div>
+                </div> -->
         
             </section>
 
