--- a/niagahoster.html
+++ b/niagahoster.html
@@ -104,7 +104,7 @@
                 <!-- <h2 class="section-title" style="color: black;">About</h2> -->
                 <div class="about__container bd-grid" style="align-items: center;">
                     <div class="port__img">   
-                        <img src="assets/img/niagahoster/Data Analysis_2.png" style="border-radius: 1rem;" alt=""> 
+                        <img src="assets/img/niagahoster/Data Analysis_2.png" alt=""> 
                     </div>    
                     <div>
                         <p class="about__text" style="color: black;">
@@ -121,8 +121,8 @@
                             Computer Electonic dan Technology, Web Hosting dan Domain Names, dan Programming and Developer Software.
                         </p>     
                     </div>  
-                    <div class="port__img">   
-                        <img src="assets/img/niagahoster/Data Analysis_3.png" style="width: 70%;" alt=""> 
+                    <div class="port__img" style="align-items: center;">   
+                        <img src="assets/img/niagahoster/Data Analysis_3.png" style="width: 80%;" alt=""> 
                     </div>                                   
                 </div>
             </section>
@@ -176,7 +176,7 @@
                         </p>  
                     </div>
                 </div>
-                <div class="bd-grid" style="align-items: center;">
+                <div class="bd-grid">
                     <div>
                         <h3 class="about__subtitle" style="color: black;">Screening Question</h3>
                         <p class="about__text" style="color: black;">
