--- a/niagahoster.html
+++ b/niagahoster.html
@@ -234,7 +234,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="bd-grid" style="align-items: center;">
+                <div class="bd-grid">
                     <h3 class="about__subtitle" style="color: black;">Participant 1</h3>
                 </div>
                 <div class="about__container bd-grid">
@@ -307,7 +307,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="bd-grid" style="align-items: center;">
+                <div class="bd-grid">
                     <h3 class="about__subtitle" style="color: black;">Participant 2</h3>
                 </div>
                 <div class="about__container bd-grid">
