--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
             <section class="work section" id="work">
                 <h2 class="section-title" style="color: black;">Work</h2>
 
-                <div class="bd-grid" style="align-items: center;">
+                <!-- <div class="bd-grid" style="align-items: center;">
                     <h2 class="about__subtitle" style="color: black;">UI/UX Study Case</h2>
-                </div>
+                </div> -->
                 <div class="about__container bd-grid" style="align-items: center;">
                     <div>
                         <div class="work__img">
@@ -209,6 +209,15 @@
                         </div>
                         <div>
                             <h3 style="color: black;"> Redesign Checkout Flow Niagahoster</h3>
+                            <p style="color: black;"> UX/UI Design</p>
+                        </div>
+                    </div>       
+                    <div>
+                        <div class="work__img">
+                            <a href="catat.html"><img src="assets/img/catat/Cover-1.png" alt=""></a>
+                        </div>
+                        <div>
+                            <h3 style="color: black;"> Catat - Sales Transcation Recording</h3>
                             <p style="color: black;"> UX/UI Design</p>
                         </div>
                     </div>
@@ -219,15 +228,6 @@
                         <div>
                             <h3 style="color: black;"> Usability Testing Research Plan Ideabox</h3>
                             <p style="color: black;"> UX Research</p>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="work__img">
-                            <a href="catat.html"><img src="assets/img/catat/Cover-1.png" alt=""></a>
-                        </div>
-                        <div>
-                            <h3 style="color: black;"> Catat - Sales Transcation Recording</h3>
-                            <p style="color: black;"> UX/UI Design</p>
                         </div>
                     </div>
                     <div>
