--- a/index.html
+++ b/index.html
@@ -70,11 +70,17 @@
                     
                     <div>
                         <h2 class="about__subtitle">Irfan Purwo Saputro</h2>
-                        <p class="about__text" style="color: black;">My name is Irfan Purwo Saputro, I graduated from State Polytechnic of Malang majoring in Informatic Engineering in 2023, 
-                            with a strong passion for UI/UX Design. Through extensive training and practical projects, such as redesigning the Kitabisa app, 
-                            I have honed my ability to apply user-centered design principles and leverage tools like Figma to create intuitive and engaging interfaces. 
-                            My programming experience complements my design skills, provides a solid foundation in web development and enhances my ability to build user interfaces. 
-                            I am looking for the opportunity to develop my skills and experience to contribute to a dynamic team and develop further as a professional in the UI/UX design field.
+                        <p class="about__text" style="color: black;">
+                            My name is Irfan Purwo Saputro, I graduated from Politeknik Negeri Malang majoring in 
+                            Informatics Engineering in 2023, with a strong interest in UI/UX Design. Through extensive 
+                            training and practical projects, such as building a website and redesigning an application's 
+                            user interface, I have honed my ability to apply user-centered design principles and leverage 
+                            tools such as Figma to create intuitive and engaging interfaces. My programming experience 
+                            complements my design skills, providing a solid foundation in web development and enhancing 
+                            my ability to build user interfaces and conduct user research. I am looking for opportunities 
+                            to develop my skills and experience to cont	ribute to a dynamic team and grow further as a 
+                            professional in the field of UI/UX design.
+                        </p>
                     </div>                                   
                 </div>
             </section>
@@ -217,7 +223,7 @@
                             <a href="catat.html"><img src="assets/img/catat/Cover-1.png" alt=""></a>
                         </div>
                         <div>
-                            <h3 style="color: black;"> Catat - Sales Transcation Recording</h3>
+                            <h3 style="color: black;"> Catat - Sales Transaction Recording</h3>
                             <p style="color: black;"> UX/UI Design</p>
                         </div>
                     </div>
